@@ -4,6 +4,7 @@
     <Version>0.12.17</Version>
     <Title>Picta Downloader GUI Installer</Title>
     <Publisher>Picta Downloader GUI Team</Publisher>
-    <StartMenuDir>Picta Downloader</StartMenuDir>
-    <TargetDir>@ApplicationsDir@/Picta-Downloader-GUI</TargetDir>
+    <RunProgram>@TargetDir@/Picta-dl_GUI.exe</RunProgram>
+    <StartMenuDir>Picta Downloader GUI</StartMenuDir>
+    <TargetDir>@ApplicationsDir@/Picta Downloader GUI</TargetDir>
 </Installer>
